deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-parser
  labels:
    app: eth-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eth-parser
  template:
    metadata:
      labels:
        app: eth-parser
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: eth-parser
          image: busybox
          command:
            - /app/servicebin
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 15m
              memory: 25Mi
            limits:
              cpu: 100m
              memory: 100Mi
