deploy/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-parser
  labels:
    app: eth-parser
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: eth-parser
