deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-parser
spec:
  selector:
    app.kubernetes.io/name: eth-parser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
