deploy/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: eth-parser
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "180"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - eth-parser.shopgrip.ru
      secretName: shopgrip-tls
  rules:
    - host: eth-parser.shopgrip.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eth-parser
                port:
                  number: 80
